fix cutoff placeholder text

--- a/src/components/inputs/Text.scss
+++ b/src/components/inputs/Text.scss
@@ -19,5 +19,6 @@
 	&::placeholder {
 		font-style: italic;
 		color: $tertiary-grey;
+		overflow: visible;
 	}
 }
